# luau_c

./: .gitmodules  CMakeLists.txt  Sources.cmake  build.cmd  test.lua
Analysis/src/: EmbeddedBuiltinDefinitions.cpp  JsonEncoder.cpp  Transpiler.cpp  TypeInfer.cpp  TypeVar.cpp
Ast/include/Luau/: Ast.h  Lexer.h
Ast/src/: Ast.cpp  Lexer.cpp  Parser.cpp
Common/include/Luau/: Bytecode.h
Compiler/include/Luau/: Bytecode.h
Compiler/src/: Builtins.cpp  BytecodeBuilder.cpp  Compiler.cpp
VM/include/: lua.h  lualib.h
VM/src/: base64.cpp  json.cpp  lapi.cpp  lapi.h  lascii85lib.cpp  laux.cpp  lbase64lib.cpp  lbaselib.cpp  lbit.cpp  lbit.h  lbitlib.cpp  lbooklib.cpp  lboost.cpp  lboost.h  lc.cpp  lc.h  lcommon.h  lcprlib.cpp  lenum.cpp  lenum.h  linit.cpp  ljsonlib.cpp  lmathlib.cpp  lnumutils.h  lstrlib.cpp  ltablib.cpp  ltimelib.cpp  ltm.cpp  ltm.h  lutf8lib.cpp  lvmexecute.cpp  lvmutils.cpp
fuzz/: protoprint.cpp
tests/: Conformance.test.cpp  TypeInfer.builtins.test.cpp  TypeInfer.test.cpp
tests/conformance/: basic.lua  cpr.lua  events.lua  math.lua  strings.lua
